--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-architects/module-federation": "^17.0.1",
     "@angular/animations": "^15.2.0",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
@@ -20,6 +21,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "mobx": "^6.12.0",
     "rxjs": "~7.8.0",
     "single-spa": ">=4.0.0",
     "single-spa-angular": "^8.1.1",
@@ -32,6 +34,7 @@
     "@angular-devkit/build-angular": "^15.2.10",
     "@angular/cli": "15",
     "@angular/compiler-cli": "15.2.10",
+    "@ngtools/webpack": "^17.0.6",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
@@ -40,6 +43,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "style-loader": "^3.3.1",
-    "typescript": "~4.9.4"
+    "typescript": "^4.9.5"
   }
 }
