--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "mobx": "^6.12.0",
+    "mobx-angular": "^4.7.2",
     "rxjs": "~7.8.0",
     "single-spa": ">=4.0.0",
     "single-spa-angular": "^8.1.1",
@@ -36,6 +37,7 @@
     "@angular/compiler-cli": "15.2.10",
     "@ngtools/webpack": "^17.0.6",
     "@types/jasmine": "~4.3.0",
+    "babel-preset-angular": "^6.0.15",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
