--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,16 +13,24 @@
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
-    "experimentalDecorators": true,
-    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
     "importHelpers": true,
-    "target": "ES2022",
-    "module": "ES2022",
     "useDefineForClassFields": true,
+    // "moduleResolution": "node",
+    // "experimentalDecorators": true,
+    // "emitDecoratorMetadata": true,
+    // "module": "ES2022",
+    // "target": "es2022",
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "target": "es2015",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "skipLibCheck": true,
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
